Generalized Model Manager
