# iris/misc/swagger.json
@@ -2,7 +2,7 @@
   "swagger": "2.0",
   "info": {
     "title": "InterSystems IRIS REST CRUD for Integrated ML Demo",
-    "description": "Rest API for the Integrated ML Demo on the Titanic database",
+    "description": "Rest API for the Integrated ML Demo",
     "version": "0.2",
     "contact": {
       "email": "theophile.thierry@intersystems.com"
@@ -13,7 +13,7 @@
     }
   },
   "host": "localhost:52775",
-  "basePath": "/api/titanic",
+  "basePath": "/api/integratedML",
   "schemes": [
     "http",
     "https"
@@ -207,6 +207,41 @@
         }
       }
     },
+    "/ml/tablesize": {
+      "get": {
+        "description": "Retreive the total number of objects in a table",
+        "summary": "Get nb of objects in table",
+        "parameters": [
+          {
+            "in": "query",
+            "name": "table",
+            "type": "string",
+            "description": "The table we need the max size from"
+          }
+        ],
+        "operationId": "getTableSize",
+        "x-ISC_ServiceMethod": "getTableSize",
+        "responses": {
+          "200": {
+            "description": "(Expected Result)",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "total": {
+                  "type": "number"
+                }
+              }
+            }
+          },
+          "204": {
+            "description": "(Not Found)"
+          },
+          "default": {
+            "description": "(Unexpected Error)"
+          }
+        }
+      }
+    },
     "/ml/models": {
       "get": {
         "description": "Retreive all created models",
@@ -368,6 +403,9 @@
                 },
                 "trainingName": {
                   "type": "string"
+                },
+                "fromTable": {
+                  "type": "string"
                 }
               }
             }
@@ -406,9 +444,15 @@
             "name": "modelName",
             "type": "string",
             "description": "Name of the model"
+          },
+          {
+            "in": "query",
+            "name": "trainingName",
+            "type": "string",
+            "description": "Name of the training run"
           }
         ],
-        "description": "Get the state of the latest training run in date of a specific model",
+        "description": "Get the state of a speecific training run",
         "summary": "Get state of training run",
         "operationId": "getStateTrainingRun",
         "x-ISC_ServiceMethod": "getStateTrainingRun",
@@ -651,14 +695,21 @@
             "type": "string"
           },
           {
-            "name": "passenger",
+            "name": "id",
             "in": "query",
-            "description": "Id of passenger to predict",
+            "description": "ID to predict with",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "fromTable",
+            "in": "query",
+            "required": true,
+            "type": "string",
+            "description": "Table to predict from"
           }
         ],
-        "description": "Predict with a certain model, a certain trained model and a certain passenger",
+        "description": "Predict with a certain model, a certain trained model and a certain id from a certain table",
         "summary": "Predict with a model and an id",
         "operationId": "predict",
         "x-ISC_ServiceMethod": "predict",
@@ -711,14 +762,21 @@
             "type": "string"
           },
           {
-            "name": "passenger",
+            "name": "id",
             "in": "query",
-            "description": "ID of the passenger",
+            "description": "ID to predict with",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "fromTable",
+            "in": "query",
+            "description": "Table to predict from",
             "required": true,
             "type": "string"
           }
         ],
-        "description": "Gives the probability of being predicted the labelValue with a certain model, a certain trained model and a certain passenger",
+        "description": "Gives the probability of being predicted the labelValue with a certain model, a certain trained model and a certain id from a certain table",
         "summary": "Probabilities of having labelValue value predicted",
         "operationId": "probability",
         "x-ISC_ServiceMethod": "probability",
